--- a/src/main/resources/Fxml/Client/ClientMenuView/SchermataCreazioneScheda.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/SchermataCreazioneScheda.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane id="contenitoreSchermata" stylesheets="@../../../Styles/scheda.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchermataCreazioneSchedaController">
+<BorderPane id="contenitoreSchermata" styleClass="background_chiaro" stylesheets="@../../../Styles/scheda.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchermataCreazioneSchedaController">
    <center>
       <VBox alignment="CENTER" fillWidth="false" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
