--- a/src/main/resources/Fxml/Client/ClientMenuView/SchermataSelezioneAbbonamento.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/SchermataSelezioneAbbonamento.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane id="contenitoreSelezioneAbbonamento" fx:id="anchorPaneContenitore" prefHeight="500.0" prefWidth="1020.0" styleClass="background_chiaro" stylesheets="@../../../Styles/bannerSelezioneStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchermataSelezioneAbbonamentoController">
    <children>
-      <VBox maxHeight="500.0" maxWidth="1020.0" minHeight="500.0" minWidth="1020.0">
+      <VBox maxHeight="500.0" maxWidth="1020.0" minHeight="500.0" minWidth="1020.0" styleClass="background_chiaro">
          <children>
             <Label id="titoloPaginaSelezioneAbbonamento" alignment="CENTER" contentDisplay="CENTER" prefHeight="36.0" prefWidth="1026.0" text="Seleziona un abbonamento" />
             <ScrollPane id="scrollPaneAbbonamenti" pannable="true">
