--- a/src/main/resources/Fxml/Admin/MenuAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/MenuAdmin.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -7,21 +8,27 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 
-<BorderPane stylesheets="@../../Styles/DashboardAdmin.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.MenuAdminController">
+<BorderPane stylesheets="@../../Styles/MenuAdmin.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.MenuAdminController">
    <top>
-      <HBox fillHeight="false" styleClass="barraMenuAdmin" BorderPane.alignment="CENTER">
+      <HBox fillHeight="false" spacing="15.0" styleClass="barraMenuAdmin" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="80.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../Images/LOGO_rettangolare.png" />
                </image>
+               <HBox.margin>
+                  <Insets bottom="15.0" />
+               </HBox.margin>
             </ImageView>
             <Button fx:id="dashboardButton" mnemonicParsing="false" styleClass="bottoneDashboardAdmin" text="Home" textAlignment="CENTER" />
             <Button fx:id="usersButton" mnemonicParsing="false" styleClass="bottoneDashboardAdmin" text="Utenti" textAlignment="CENTER" />
             <Button fx:id="schedeButton" mnemonicParsing="false" styleClass="bottoneDashboardAdmin" text="Schede" textAlignment="CENTER" />
             <Button fx:id="certificatiButton" mnemonicParsing="false" styleClass="bottoneDashboardAdmin" text="Certificati" textAlignment="CENTER" />
             <Region HBox.hgrow="ALWAYS" />
-            <Button fx:id="logoutButton" mnemonicParsing="false" styleClass="bottoneDashboardAdmin" text="Logout" textAlignment="CENTER" />
+            <Button fx:id="logoutButton" mnemonicParsing="false" styleClass="bottoneDashboardAdmin" text="Logout" textAlignment="CENTER">
+               <HBox.margin>
+                  <Insets right="15.0" />
+               </HBox.margin></Button>
          </children>
       </HBox>
    </top>
