--- a/src/main/resources/Fxml/Admin/ModificaUtente.fxml
+++ b/src/main/resources/Fxml/Admin/ModificaUtente.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminModificaUtenteController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background_chiaro" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminModificaUtenteController">
    <top>
       <Label text="Modifica utente" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -83,12 +83,12 @@
    <bottom>
       <HBox alignment="CENTER_RIGHT" prefHeight="75.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="inputAnnulla" mnemonicParsing="false" text="Annulla">
+            <Button fx:id="inputAnnulla" mnemonicParsing="false" styleClass="bottone_scheda" text="Annulla">
                <HBox.margin>
                   <Insets right="20.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="inputSalva" mnemonicParsing="false" onAction="#salvaModificheUtente" text="Salva le modifiche">
+            <Button fx:id="inputSalva" mnemonicParsing="false" onAction="#salvaModificheUtente" styleClass="bottone_scheda" text="Salva le modifiche">
                <HBox.margin>
                   <Insets right="20.0" />
                </HBox.margin>
