--- a/src/main/resources/Fxml/Admin/ModificaUtente.fxml
+++ b/src/main/resources/Fxml/Admin/ModificaUtente.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background_chiaro" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminModificaUtenteController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="360.0" prefWidth="600.0" styleClass="background_chiaro" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminModificaUtenteController">
    <top>
       <Label text="Modifica utente" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets top="10.0" />
+            <Insets bottom="20.0" top="20.0" />
          </BorderPane.margin>
          <font>
             <Font name="Arial Bold" size="16.0" />
@@ -23,7 +23,7 @@
       </Label>
    </top>
    <left>
-      <VBox alignment="TOP_CENTER" prefHeight="212.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="212.0" prefWidth="300.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <Label stylesheets="@../../Styles/login.css" text="Nome:">
                <VBox.margin>
@@ -37,12 +37,6 @@
                </VBox.margin>
             </Label>
             <TextField fx:id="inputNuovoCognome" styleClass="input_login" stylesheets="@../../Styles/login.css" />
-            <Label text="Data di nascita:">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </Label>
-            <DatePicker fx:id="inputNuovaDataNascita" prefHeight="26.0" prefWidth="314.0" styleClass="input_login" stylesheets="@../../Styles/login.css" />
          </children>
          <BorderPane.margin>
             <Insets />
@@ -53,8 +47,14 @@
       </VBox>
    </left>
    <right>
-      <VBox alignment="TOP_CENTER" prefHeight="370.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="370.0" prefWidth="300.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
+            <Label text="Data di nascita:">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Label>
+            <DatePicker fx:id="inputNuovaDataNascita" prefHeight="26.0" prefWidth="314.0" styleClass="input_login" stylesheets="@../../Styles/login.css" />
             <Label text="Seleziona tipo abbonamento:">
                <VBox.margin>
                   <Insets top="10.0" />
@@ -65,12 +65,6 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </ComboBox>
-            <Label text="Data di rinnovo:">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </Label>
-            <DatePicker fx:id="inputNuovaDataRinnovo" prefHeight="26.0" prefWidth="300.0" styleClass="input_login" stylesheets="@../../Styles/login.css" />
          </children>
          <BorderPane.margin>
             <Insets />
@@ -96,4 +90,7 @@
          </children>
       </HBox>
    </bottom>
+   <padding>
+      <Insets left="10.0" right="10.0" />
+   </padding>
 </BorderPane>
