--- a/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
@@ -105,8 +105,8 @@
                                     <Font size="20.0" />
                                  </font>
                               </Label>
-                              <ComboBox fx:id="annoGrafico" prefWidth="150.0" />
-                              <BarChart VBox.vgrow="ALWAYS">
+                              <ComboBox fx:id="annoGraficoTendina" prefWidth="150.0" />
+                              <BarChart fx:id="graficoAnnuale" VBox.vgrow="ALWAYS">
                                 <xAxis>
                                   <CategoryAxis side="BOTTOM" />
                                 </xAxis>
